--- a/cv_site/css/style.css
+++ b/cv_site/css/style.css
@@ -4,7 +4,7 @@
 	font-family: Segoe UI Bold, sans-serif;
 	font-size: 15px;
 	align-items: center;
-	padding: 0px 75px;
+	padding: 0 75px;
 	min-height: 60px;
 	background-color: #212529;
 }
@@ -12,6 +12,7 @@
 header{
 	position: fixed;
 	width: 100%;
+	z-index: 1;
 }
 
 #logo {
@@ -67,7 +68,7 @@ header{
 
 #tariff {
 	color: #F8DF9E;
-	margin: 20px 0px;
+	margin: 20px 0;
 }
 
 #choice {
@@ -99,9 +100,9 @@ header{
 	width: 100%;
 	color: black;
 	text-align: center;
-	margin: 20px 0px;
+	margin: 20px 0;
 	background-color: #FAE09F;
-	padding: 15px 0px;
+	padding: 15px 0;
 	text-decoration: none;
 	text-transform: uppercase;
 	border-radius: 10px;
@@ -130,9 +131,9 @@ main {
 	color: black;
 	border-radius: 10px;
 	border: 1px solid #293033;
-	margin: 0px 75px 75px 75px;
+	margin: 0 75px 75px 75px;
 	align-items: center;
-	padding: 0px 80px;
+	padding: 0 80px;
 	min-height: 75px;
 	color: white;
 }
@@ -153,7 +154,7 @@ main {
 
 
 #competences_text p {
-	margin: 20px 0px 100px 0px;
+	margin: 20px 0 100px 0;
 	font-family: Segoe UI Regular, sans-serif;
 	font-size: 15px;
 	line-height: 20px;
@@ -185,15 +186,16 @@ h1 {
 	font-size: 25px;
 }
 
-#formations #slider {
+#formations .slider {
 	display: flex;
 	font-family: Segoe UI Regular, sans-serif;
 	font-size: 15px;
 	margin: 30px 0 40px 40px;
 	overflow: hidden;
+	gap: 20px;
 }
 
-#formations #slider li {
+#formations .slider li {
 	background-color: #20242B;
 	min-width: 400px;
 	padding: 30px 30px 75px 30px;
@@ -202,28 +204,24 @@ h1 {
 	line-height: 20px;
 }
 
-#formations #slider li:not(:last-child) {
-	margin-right: 20px;
-}
-
-#formations #slider li ul img {
+#formations .slider li ul img {
 	border-radius: 10px;
 }
 
 h3 {
 	color: #B4BAC9;
 	font-size: 20px;
-	margin: 30px 0px 10px 0px;
+	margin: 30px 0 10px 0;
 }
 
-#formations nav button#previous {
+#formations nav button.previous {
 	position: absolute;
 	bottom: -920px;
 	left: 15px;
 	background-image: url(../img/icons/fleche_noire_previous.svg);
 	background-repeat: no-repeat;
 	background-position: 10px center;
-	text-indent: -1000px;
+	text-indent: -5000px;
 	border-radius: 50%;
 	border: 5px solid black;
 	background-color: white;
@@ -232,7 +230,7 @@ h3 {
 	padding: 20px;
 }
 
-#formations nav button#next {
+#formations nav button.next {
 	position: absolute;
 	bottom: -920px;
 	left: 1435px;
@@ -248,8 +246,107 @@ h3 {
 	padding: 20px;
 }
 
-#formations h1, #langages h1, #skills h1 {
+#formations h1, #langages h1 {
 	margin-left: 40px;
 }
 
+#langages .slider {
+	display: flex;
+	justify-content: space-between;
+	overflow: hidden;
+	gap: 20px;
+	margin: 30px 0 40px 40px;
+}
 
+#langages .slider img {
+	border-radius: 10px;
+	transition: transform 0.5s ease-in-out;
+}
+
+.image_container {
+	overflow: hidden;
+	border-radius: 10px;
+	height: 260px;
+}
+
+#langages .slider img:hover {
+	transform: scale(1.1);
+}
+
+#langages nav button.next, #langages nav button.previous {
+	position: absolute;
+	background-repeat: no-repeat;
+	text-indent: -5000px;
+	border-radius: 50%;
+	border: 5px solid black;
+	background-color: white;
+	width: 17px;
+	height: 28px;
+	padding: 20px;
+}
+
+#langages nav button.next {
+	background-image: url(../img/icons/fleche_noire_next.svg);
+	bottom: -1395px;
+	left: 1435px;
+	background-position: 13px center;
+}
+
+#langages nav button.previous {
+	background-image: url(../img/icons/fleche_noire_previous.svg);
+	bottom: -1395px;
+	left: 15px;
+	background-position: 10px center;
+}
+
+#soft_skills {
+	border-radius: 10px;
+	border: 2px solid #293033;
+	padding: 65px;
+	margin: 40px;
+}
+
+#soft_skills h1 {
+	margin-bottom: 35px;
+}
+
+#soft_skills p {
+	font-family: Segoe UI Regular, sans-serif;
+	font-size: 15px;
+}
+
+footer{
+	padding: 40px;
+	background-color: black;
+	color: white;
+}
+
+#socials {
+	display: flex;
+	width: 330px;
+	justify-content: space-between;
+	gap: 70px;
+}
+
+#facebook, #github, #instagram {
+	text-decoration: none;
+	display: inline-block;
+	background-repeat: no-repeat;
+	background-position: center;
+	overflow: hidden;
+	width: 40px;
+	height: 40px;
+	text-indent: -5000px;
+}
+
+#facebook {
+	background-image: url(../img/ref/facebook.svg);
+}
+
+#github {
+	background-image: url(../img/ref/github.svg);
+}
+
+#instagram {
+	background-image: url(../img/ref/instagram.svg);
+}
