--- a/cv_site/css/style.css
+++ b/cv_site/css/style.css
@@ -231,6 +231,7 @@ main {
 #hobbies_button {
 	position: fixed;
 	bottom: 0;
+	z-index: 3;
 }
 
 #competences {
@@ -575,4 +576,60 @@ ul#first_slider, ul#second_slider {
 	transition: .4s ease-in-out;
 	position: relative;
 	left: 0;
+}
+
+#hobbies_list {
+	color: white;
+	background-color: black;
+	font-family: Segoe UI Regular, sans-serif;
+	font-size: 15px;
+	line-height: 25px;
+	display: inline-block;
+	max-width: 50%;
+	padding: 30px;
+	min-height: 100vh;
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: 2;
+	transition: 0.4s ease-in-out;
+}
+
+#hobbies h2 {
+	margin-bottom: 15px;
+	font-family: Segoe UI Bold, sans-serif;
+	font-size: 20px;
+}
+
+#hobbies ul li {
+	margin-bottom: 30px;
+	border-bottom: 2px solid #404040;
+	padding-bottom: 50px;
+}
+
+#hobbies li p:last-child {
+	border: 2px solid white;
+	padding: 5px 10px;
+	border-radius: 5px;
+	margin-top: 15px;
+	display: inline-block;
+}
+
+#hobbies ul li:first-child {
+	position: absolute;
+	left: 770px;
+}
+
+#hobbies ul.no_display {
+	visibility: hidden;
+}
+
+.opacity {
+	background-color: rgba(0,0,0,0.4);
+	position: fixed;
+	top: 0;
+	right: 0;
+	z-index: 1;
+	width: 100vh;
+	height: 100vh;
 }
