--- a/cv_site/css/style.css
+++ b/cv_site/css/style.css
@@ -1,11 +1,11 @@
 #main_nav {
 	display: flex;
 	color: white;
-	font-family: Segoe UI Bold, sans-serif;
-	font-size: 15px;
+	font-family: "Metropolis Bold", "Montserrat Bold", "Segoe UI Bold", sans-serif;
+	font-size: 0.9275em;
 	align-items: center;
-	padding: 0 75px;
-	min-height: 60px;
+	padding: 0 4.6875em;
+	min-height: 3.75em;
 	background-color: #212529;
 }
 
@@ -13,14 +13,14 @@
 	display: flex;
 	flex-direction: row-reverse;
 	justify-content: space-between;
-	font-family: Segoe UI Regular, sans-serif;
-	font-size: 15px;
+	font-family: "Metropolis Bold", "Montserrat Bold", "Segoe UI Bold", sans-serif;
+	font-size: 0.9275em;
 	color: #806520;
-	margin-top: 60px;
+	margin-top: 3.75em;
 }
 
 #no_js_message label {
-	margin: 30px 30px 30px 0;
+	margin: 2em 2em 2em 0;
 }
 
 #no_js_message {
@@ -28,13 +28,13 @@
 }
 
 #no_js_message p {
-	margin: 30px 0 30px 250px;
+	margin: 2em 0 2em 16.7em;
 }
 
 #no_js_message a{
 	color: white;
 	background-color: black;
-	padding: 10px;
+	padding: 0.7em;
 	text-transform: uppercase;
 	text-decoration: none;
 }
@@ -53,7 +53,7 @@
 	cursor: pointer;
 	display: inline-block;
 	position: relative;
-	width: 20px;
+	width: 1.3em;
 	aspect-ratio: 1;
 }
 
@@ -86,22 +86,23 @@ header{
 
 #logo {
 	border-right: 1px solid white;
-	padding-right: 30px;
-	margin-right: 30px;
+	padding-right: 2em;
+	margin-right: 2em;
 }
 
 #article_number {
 	position: absolute;
-	top: 25px;
-	right: 97px;
+	top: 1.7em;
+	right: 1.4em;
 }
 
 #nav_list {
 	display: flex;
 	flex-grow: 1;
 	align-items: center;
-	margin-left: 60px;
+	margin-left: 4em;
 	justify-content: space-between;
+	position: relative;
 }
 
 #nav_list>li:not(:last-child) {
@@ -109,12 +110,12 @@ header{
 }
 
 #nav_list>li {
-	padding: 12px 12px 12px 12px;
-	border-radius: 10px;
+	padding: 0.8em;
+	border-radius: 0.7em;
 }
 
 #nav_list>li:not(:last-child) img{
-	margin-left: 5px;
+	margin-left: 0.3em;
 }
 
 .rotate {
@@ -132,51 +133,63 @@ header{
 #nav_list ul::before {
 	content: url(../img/icons/flèche_jaune.svg);
 	position: absolute;
-	top: -17px;
-	right: 150px;
+	padding: 0 5.33em;
+	top: -1em;
+}
+
+#nav_list ul#first_dropdown:before, #nav_list ul#second_dropdown:before, #nav_list ul#fifth_dropdown:before {
+	left: 0.75em;
+}
+
+#nav_list ul#third_dropdown:before {
+	left: 5.75em;
+}
+
+#nav_list ul#fourth_dropdown:before {
+	left: 0.5em;
 }
 
 #nav_list ul {
-	padding: 30px 25px 20px 20px;
+	padding: 2em 1.67em 1.3em 1.3em;
 	background-color: #282B35;
 	z-index: 2;
 	position: absolute;
 	display: flex;
 	flex-direction: column;
-	gap: 20px;
+	gap: 1.3em;
 	text-transform: none;
 	justify-content: space-between;
-	min-width: 150px;
-	border-radius: 10px;
+	min-width: 10em;
+	border-radius: 0.66em;
 	text-align: left;
 	border-top: 4px solid #FAE09F;
-	top: 60px;
+	top: 4em;
 }
 
 #first_dropdown {
-	right: 950px;
+	right: 62em;
 }
 
 #second_dropdown {
-	right: 750px;
+	right: 49em;
 }
 
 #third_dropdown {
-	right: 550px;
+	right: 29em;
 }
 
 #fourth_dropdown {
-	right: 300px;
+	right: 19em;
 }
 
 #fifth_dropdown {
-	right: 75px;
+	right: 4em;
 }
 
 #nav_list ul li a{
 	color: white;
-	font-family: Segoe UI Regular, sans-serif;
-	font-size: 15px;
+	font-family: "Metropolis Regular", "Montserrat Regular", "Segoe UI Regular", sans-serif;
+	font-size: 1em;
 	text-decoration: none;
 }
 
@@ -189,7 +202,7 @@ header{
 }
 
 .hidden {
-	text-indent: -1000px;
+	text-indent: -5000px;
 	overflow: hidden;
 	font-size: 0;
 }
@@ -197,20 +210,20 @@ header{
 #informations {
 	color: white;
 	background-color: #20242B;
-	max-width: 350px;
-	margin-left: 75px;
-	margin-top: 225px;
-	padding: 40px 30px;
-	border-radius: 20px;
+	max-width: 18em;
+	margin-left: 3.8em;
+	margin-top: 9em;
+	padding: 2.5em 1.875em;
+	border-radius: 1.25em;
 	text-align: left;
-	font-family: Segoe UI Bold, sans-serif;
-	font-size: 20px;
+	font-family: "Metropolis Bold", "Montserrat Bold", "Segoe UI Bold", sans-serif;
+	font-size: 1.25em;
 }
 
 #gender {
 	color: #B4BAC9;
-	margin-bottom: 3px;
-	font-size: 15px;
+	margin-bottom: 0.15em;
+	font-size: 0.75em;
 }
 
 main {
@@ -221,15 +234,15 @@ main {
 
 #tariff {
 	color: #F8DF9E;
-	margin: 20px 0;
+	margin: 1em 0;
 }
 
 #choice {
 	background-color: #32363F;
-	border-radius: 10px;
-	margin-bottom: 20px;
-	padding: 10px 15px;
-	font-family: Segoe UI Regular, sans-serif;
+	border-radius: 0.5em;
+	margin-bottom: 1em;
+	padding: 0.5em 0.75em;
+	font-family: "Metropolis Regular", "Montserrat Regular", "Segoe UI Regular", sans-serif;
 }
 
 #lastname {
@@ -244,8 +257,8 @@ main {
 #services_list li {
 	background-color: black;
 	border: 1px solid white;
-	padding: 15px 10px;
-	border-radius: 10px;
+	padding: 0.9375em 0.625em;
+	border-radius: 0.625em;
 }
 
 #services_list li:hover {
@@ -262,12 +275,12 @@ main {
 	width: 100%;
 	color: black;
 	text-align: center;
-	margin: 20px 0;
+	margin: 1em 0;
 	background-color: #FAE09F;
-	padding: 15px 0;
+	padding: 0.9375em 0;
 	text-decoration: none;
 	text-transform: uppercase;
-	border-radius: 10px;
+	border-radius: 0.625em;
 }
 
 #informations p:hover {
@@ -282,58 +295,58 @@ main {
 
 #competences {
 	color: white;
-	margin: 50px 0;
-	padding-top: 40px;
+	margin: 3.125em 0;
+	padding-top: 2.5em;
 	z-index: 1;
 }
 
 #competences_list {
-	font-family: Segoe UI Bold, sans-serif;
+	font-family: "Metropolis Bold", "Montserrat Bold", "Segoe UI Bold", sans-serif;
 	display: flex;
 	justify-content: space-around;
 	color: white;
-	border-radius: 10px;
+	border-radius: 0.625em;
 	border: 1px solid #293033;
-	margin: 0 75px 75px 75px;
+	margin: 0 4.6875em 4.6875em 4.6875em;
 	align-items: center;
-	min-height: 75px;
+	min-height: 4.6875em;
 }
 
 #competences_list>li:not(:last-child) {
-	padding-right: 150px;
+	padding-right: 9.375em;
 	border-right: 1px solid #262C2F;
 }
 
 #competences_text {
 	background-color: #21232A;
 	text-align: left;
-	max-width: 500px;
-	padding: 30px 40px 50px 60px;
-	border-radius: 10px;
-	margin-left: 600px;
+	max-width: 31.25em;
+	padding: 1.875em 2.5em 3.125em 3.75em;
+	border-radius: 0.625em;
+	margin-left: 37.5em;
 }
 
 #competences_text p {
-	margin: 20px 0 100px 0;
-	font-family: Segoe UI Regular, sans-serif;
-	font-size: 15px;
-	line-height: 25px;
+	margin: 1.25em 0 6.25em 0;
+	font-family: "Metropolis Regular", "Montserrat Regular", "Segoe UI Regular", sans-serif;
+	font-size: 0.9375em;
+	line-height: 1.56em;
 }
 
 #competences_text a {
 	color: black;
 	display: inline-block;
 	background-color: white;
-	border-radius: 10px;
+	border-radius: 0.625em;
 	text-transform: uppercase;
 	text-decoration: none;
-	padding: 10px 50px;
-	font-family: Segoe UI Bold, sans-serif;
-	width: 200px;
+	padding: 0.625em 3.125em;
+	font-family: "Metropolis Bold", "Montserrat Bold", "Segoe UI Bold", sans-serif;
+	width: 12.5em;
 	text-align: center;
 	background-image: url(../img/ref/play.svg);
 	background-repeat: no-repeat;
-	background-position: 50px;
+	background-position: 3.125em;
 }
 
 abbr {
@@ -342,90 +355,94 @@ abbr {
 
 h1 {
 	text-transform: uppercase;
-	font-family: Segoe UI Bold, sans-serif;
-	font-size: 25px;
-}
-
-#first_slider, #second_slider {
-	cursor: grab;
+	font-family: "Metropolis Bold", "Montserrat Bold", "Segoe UI Bold", sans-serif;
+	font-size: 1.56em;
 }
 
 #formations #first_slider {
 	display: flex;
-	font-family: Segoe UI Regular, sans-serif;
-	font-size: 15px;
-	margin: 30px 0 75px 75px;
-	gap: 20px;
+	font-family: "Metropolis Regular", "Montserrat Regular", "Segoe UI Regular", sans-serif;
+	font-size: 0.9375em;
+	margin: 1.875em 0 4.6875em 4.6875em;
+	gap: 1.25em;
 }
 
 #formations #first_slider>li {
 	background-color: #20242B;
-	min-width: 380px;
-	border-radius: 10px;
+	min-width: 25.335em;
+	border-radius: 0.67em;
 	text-align: left;
-	line-height: 25px;
-	padding: 30px 30px 75px 30px;
+	line-height: 1.67em;
+	padding: 2em 2em 5em 2em;
 }
 
 #formations #first_slider li ul img {
-	border-radius: 10px;
+	border-radius: 0.67em;
 }
 
 h3 {
 	color: #B4BAC9;
-	font-size: 20px;
-	margin: 30px 0 10px 0;
+	font-size: 1.3em;
+	margin: 2em 0 0.67em 0;
 }
 
 button {
 	cursor: pointer;
 }
 
+#formations nav {
+	position: relative;
+}
+
 #formations nav #first_slider_previous {
 	position: absolute;
-	bottom: -1010px;
-	left: 48px;
+	top: 21em;
+	left: 3.5em;
 	background-image: url(../img/icons/fleche_noire_previous.svg);
 	background-repeat: no-repeat;
-	background-position: 10px center;
+	background-position: 0.625em center;
 	text-indent: -5000px;
 	border-radius: 50%;
 	border: 5px solid black;
 	background-color: white;
-	width: 17px;
-	height: 28px;
-	padding: 20px;
+	width: 1.06em;
+	height: 1.75em;
+	padding: 1.5em;
 }
 
 #formations nav #first_slider_next {
 	position: absolute;
-	bottom: -1010px;
-	left: 1410px;
+	top: 21em;
+	right: 4.7em;
 	background-image: url(../img/icons/fleche_noire_next.svg);
 	background-repeat: no-repeat;
-	background-position: 13px center;
+	background-position: 1em center;
 	text-indent: -5000px;
 	border-radius: 50%;
 	border: 5px solid black;
 	background-color: white;
-	width: 17px;
-	height: 28px;
-	padding: 20px;
+	width: 1.06em;
+	height: 1.75em;
+	padding: 1.5em;
+}
+
+#formations nav #first_slider_next:hover, #formations nav #first_slider_previous:hover, #langages nav #second_slider_previous:hover, #langages nav #second_slider_next:hover{
+	border: 5px solid grey;
 }
 
 #formations h1, #langages h1 {
-	margin-left: 75px;
+	margin-left: 3em;
 }
 
 #langages #second_slider {
 	display: flex;
 	justify-content: space-between;
-	gap: 20px;
-	margin: 30px 0 40px 75px;
+	gap: 1.05em;
+	margin: 1.875em 0 2.5em 4.6875em;
 }
 
 #langages #second_slider img {
-	border-radius: 10px;
+	border-radius: 0.625em;
 	transition: transform 0.3s ease-in-out;
 }
 
@@ -435,8 +452,12 @@ button {
 
 .image_container {
 	overflow: hidden;
-	border-radius: 10px;
-	height: 260px;
+	border-radius: 0.625em;
+	height: 16.25em;
+}
+
+#langages nav {
+	position: relative;
 }
 
 #langages nav #second_slider_next, #langages nav #second_slider_previous {
@@ -446,52 +467,52 @@ button {
 	border-radius: 50%;
 	border: 5px solid black;
 	background-color: white;
-	width: 17px;
-	height: 28px;
-	padding: 20px;
+	width: 1.06em;
+	height: 1.75em;
+	padding: 1.5em;
 }
 
 #langages nav #second_slider_next {
 	background-image: url(../img/icons/fleche_noire_next.svg);
-	bottom: -1525px;
-	left: 1410px;
-	background-position: 13px center;
+	top: 10em;
+	right: 4.7em;
+	background-position: 1em center;
 }
 
 #langages nav #second_slider_previous {
 	background-image: url(../img/icons/fleche_noire_previous.svg);
-	bottom: -1525px;
-	left: 48px;
-	background-position: 10px center;
+	top: 10em;
+	left: 3.5em;
+	background-position: 0.625em center;
 }
 
 #soft_skills {
-	border-radius: 10px;
+	border-radius: 0.625em;
 	border: 2px solid #293033;
-	padding: 60px 40px;
-	margin: 80px 75px;
+	padding: 3.75em 2.5em;
+	margin: 5em 4.6875em;
 }
 
 #soft_skills h1 {
-	margin-bottom: 60px;
+	margin-bottom: 2.5em;
 }
 
 #soft_skills p {
-	font-family: Segoe UI Regular, sans-serif;
-	font-size: 15px;
+	font-family: "Metropolis Regular", "Montserrat Regular", "Segoe UI Regular", sans-serif;
+	font-size: 0.9375em;
 }
 
 footer{
-	padding: 50px 75px 75px 75px;
+	padding: 3.125em 4.6875em 4.6875em 4.6875em;
 	background-color: black;
 	color: white;
-	font-family: Segoe UI Regular, sans-serif;
-	font-size: 15px;
+	font-family: "Metropolis Regular", "Montserrat Regular", "Segoe UI Regular", sans-serif;
+	font-size: 0.9375em;
 }
 
 #socials {
 	display: flex;
-	gap: 60px;
+	gap: 4em;
 }
 
 #facebook, #github, #instagram {
@@ -500,8 +521,8 @@ footer{
 	background-repeat: no-repeat;
 	background-position: center;
 	overflow: hidden;
-	width: 40px;
-	height: 40px;
+	width: 2.67em;
+	height: 2.67em;
 	text-indent: -5000px;
 }
 
@@ -520,22 +541,23 @@ footer{
 #flex_container {
 	display: flex;
 	align-items: center;
-	margin-top: 40px;
-	margin-bottom: 60px;
+	margin-top: 2.5em;
+	margin-bottom: 4em;
 }
+
 #languages {
-	width: 300px;
-	padding: 10px;
+	width: 20em;
+	padding: 0.67em;
 	background-color: transparent;
 	color: white;
 	border: 2px solid white;
-	border-radius: 10px;
-	margin-right: 100px;
+	border-radius: 0.67em;
+	margin-right: 6.67em;
 }
 
 #sponsors {
 	display: flex;
-	gap: 50px;
+	gap: 3.33em;
 }
 
 #alsacreations, #lmstudio {
@@ -545,17 +567,17 @@ footer{
 	background-position: center;
 	overflow: hidden;
 	text-indent: -5000px;
-	height: 40px;
+	height: 2.67em;
 }
 
 #alsacreations {
 	background-image: url(../img/ref/alsacreations.svg);
-	width: 211px;
+	width: 14.07em;
 }
 
 #lmstudio {
 	background-image: url(../img/ref/lmstudio.svg);
-	width: 165px;
+	width: 11em;
 }
 
 #grid_container {
@@ -565,8 +587,8 @@ footer{
 				         "p formations adress"
 				         "p languages ."
 					     "p softskills .";
-	grid-column-gap: 40px;
-	grid-row-gap: 10px;
+	grid-column-gap: 2.67em;
+	grid-row-gap: 0.67em;
 	grid-auto-flow: column;
 }
 
@@ -582,7 +604,7 @@ footer{
 
 #site_explanation {
 	grid-area: p;
-	line-height: 25px;
+	line-height: 1.67em;
 }
 
 #services_footer {
@@ -626,12 +648,12 @@ ul#first_slider, ul#second_slider {
 #hobbies_list {
 	color: white;
 	background-color: black;
-	font-family: Segoe UI Regular, sans-serif;
-	font-size: 15px;
-	line-height: 25px;
+	font-family: "Metropolis Regular", "Montserrat Regular", "Segoe UI Regular", sans-serif;
+	font-size: 0.9375em;
+	line-height: 1.5625em;
 	display: inline-block;
-	max-width: 50%;
-	padding: 30px;
+	max-width: 40em;
+	padding: 1.875em;
 	min-height: 100vh;
 	position: fixed;
 	top: 0;
@@ -641,28 +663,31 @@ ul#first_slider, ul#second_slider {
 }
 
 #hobbies h2 {
-	margin-bottom: 15px;
-	font-family: Segoe UI Bold, sans-serif;
-	font-size: 20px;
+	margin-bottom: 1em;
+	font-family: "Metropolis Regular", "Montserrat Regular", "Segoe UI Regular", sans-serif;
+	font-size: 1.33em;
 }
 
 #hobbies ul li {
-	margin-bottom: 30px;
+	margin-bottom: 2em;
+	padding-bottom: 3.33em;
+}
+
+#hobbies ul li:not(:last-child) {
 	border-bottom: 2px solid #404040;
-	padding-bottom: 50px;
 }
 
 #hobbies li p:last-child {
 	border: 2px solid white;
-	padding: 5px 10px;
-	border-radius: 5px;
-	margin-top: 15px;
+	padding: 0.33em 0.67em;
+	border-radius: 0.33em;
+	margin-top: 1em;
 	display: inline-block;
 }
 
 #hobbies ul li:first-child {
 	position: absolute;
-	left: 770px;
+	left: 41em;
 }
 
 #hobbies_button:hover {
@@ -671,10 +696,6 @@ ul#first_slider, ul#second_slider {
 
 #close2:hover {
 	cursor: pointer;
-}
-
-button:hover {
-	border-color: grey;
 }
 
 #hobbies ul.no_display {
@@ -699,25 +720,24 @@ button:hover {
 }
 
 #article_hover {
-	max-width: 30%;
-	min-width: 30%;
 	background-color: white;
 	color: black;
-	font-family: Segoe UI Regular, sans-serif;
-	font-size: 15px;
+	font-family: "Metropolis Regular", "Montserrat Regular", "Segoe UI Regular", sans-serif;
+	font-size: 0.9375em;
 	margin-left: auto;
-	padding: 20px 20px 20px 30px;
+	padding: 1.25em 1.25em 1.25em 1.875em;
 	position: fixed;
-	left: 1008px;
+	left: 67.35em;
 	top: 0;
 	z-index: 3;
 	min-height: 100vh;
+	min-width: 30em;
 	text-align: left;
 }
 
 #article_hover>li:first-child{
 	position: absolute;
-	right: 50px;
+	right: 3.3em;
 }
 
 .no_display {
@@ -726,20 +746,20 @@ button:hover {
 
 #article_hover #content_profile {
 	float: left;
-	border-radius: 10px;
-	min-height: 175px;
-	margin-right: 10px;
+	border-radius: 0.67em;
+	min-height: 11.67em;
+	margin-right: 0.67em;
 }
 
 #article_hover>li ul#summary  {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
-	min-height: 175px;
+	min-height: 11.67em
 }
 
 #article_hover #delete_article, #article_hover #service_name, legend, label[for='keep_informations'], #note, input[type='submit'] {
-	font-family: Segoe UI Bold, sans-serif;
+	font-family: "Metropolis Bold", "Montserrat Bold", "Segoe UI Bold", sans-serif;
 }
 
 #article_hover #delete_article:hover {
@@ -751,11 +771,11 @@ button:hover {
 }
 
 legend {
-	margin-bottom: 10px;
+	margin-bottom: 0.67em;
 }
 
 #article_hover form {
-	margin-top: 50px;
+	margin-top: 3.3em;
 }
 
 #article_hover form ol label {
@@ -763,25 +783,25 @@ legend {
 }
 
 #article_hover form ol input {
-	padding: 20px;
-	border-radius: 10px;
+	padding: 1.33em;
+	border-radius: 0.67em;
 	border: 2px solid black;
-	margin-top: 20px;
-	width: 410px;
+	margin-top: 1.33em;
+	min-width: 31em;
 }
 
 form p {
-	margin: 30px 0 20px;
-	line-height: 20px;
+	margin: 2em 0 1.33em;
+	line-height: 1.33em;
 }
 
 #article_hover>li:last-child ul {
-	margin-top: 350px;
+	margin-top: 23.33em;
 }
 
 #article_hover>li:last-child ul li:first-child{
-	font-family: Segoe UI Regular, sans-serif;
-	font-size: 15px;
+	font-family: "Metropolis Regular", "Montserrat Regular", "Segoe UI Regular", sans-serif;
+	font-size: 1em;
 	text-align: center;
 }
 
@@ -789,53 +809,53 @@ form p {
 	display: inline-block;
 	width: 100%;
 	background-color: #FAE09E;
-	padding: 15px 0;
+	padding: 1em 0;
 	text-align: center;
 	border: none;
-	border-radius: 10px;
-	font-size: 20px;
+	border-radius: 0.67em;
+	font-size: 1.33em;
 	color: black;
-	font-family: Segoe UI Bold, sans-serif;
+	font-family: "Metropolis Bold", "Montserrat Bold", "Segoe UI Bold", sans-serif;
 	text-decoration: none;
-	margin-top: 20px;
+	margin-top: 1.33em;
 }
 
 form input[type='submit'] {
 	width: 100%;
 	background-color: #FAE09E;
-	padding: 15px 0;
+	padding: 1em 0;
 	text-align: center;
 	border: none;
-	border-radius: 10px;
-	font-size: 20px;
+	border-radius: 0.67em;
+	font-size: 1.33em;
 }
 
 .toggle {
 	position: relative;
 	display: flex;
 	align-items: center;
-	gap: 20px;
-	width: 276px;
+	gap: 1.33em;
+	width: 18.4em;
 }
 
 .toggle:before {
 	content: 'On';
 	position: absolute;
-	left: 210px;
-	bottom: 8px;
+	left: 14em;
+	bottom: 0.53em;
 	z-index: 1;
 	color: white;
-	font-family: Segoe UI Regular, sans-serif;
+	font-family: "Metropolis Regular", "Montserrat Regular", "Segoe UI Regular", sans-serif;
 }
 
 .toggle:after {
 	content: 'Off';
 	position: absolute;
-	left: 240px;
-	bottom: 8px;
+	left: 16em;
+	bottom: 0.53Em;
 	z-index: 1;
 	color: white;
-	font-family: Segoe UI Regular, sans-serif;
+	font-family: "Metropolis Regular", "Montserrat Regular", "Segoe UI Regular", sans-serif;
 }
 
 .toggle input {
@@ -848,32 +868,37 @@ form input[type='submit'] {
 	cursor: pointer;
 	background-color: grey;
 	transition: 0.4s;
-	width: 80px;
-	height: 30px;
+	width: 5.33em;
+	height: 2em;
 }
 
 .slider_round:before {
 	content: '';
 	position: absolute;
-	width: 30px;
-	height: 20px;
+	width: 2em;
+	height: 1.33em;
 	background-color: white;
 	transition: 0.4s;
-	top: 5px;
-	left: 7px;
+	top: 0.33em;
+	left: 0.467em;
 	z-index: 2;
 }
 
 .toggle input:checked + .slider_round:before {
-	transform: translateX(35px);
+	transform: translateX(2.33em);
 }
 
 .slider_round {
-	border-radius: 15px;
+	border-radius: 1em;
 }
 
 .slider_round:before {
-	border-radius: 10px;
+	border-radius: 0.67em;
+}
+
+#close1 {
+	position: absolute;
+	left: 1em;
 }
 
 #close1:hover, input[type='submit']:hover {
@@ -883,4 +908,3 @@ form input[type='submit'] {
 #panier ul.no_display {
 	display: none;
 }
-
